listings/ch03-common-programming-concepts/no-listing-05-mut-cant-change-types/output.txt
$ cargo run
   Compiling değişkenler v0.1.0 (file:///projects/değişkenler)
error[E0308]: mismatched types
 --> src/main.rs:3:14
  |
2 |     let mut boşluklar = "   ";
  |                         ----- expected due to this value
3 |     boşluklar = boşluklar.len();
  |                 ^^^^^^^^^^^^^^^ expected `&str`, found `usize`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `değişkenler` (bin "değişkenler") due to 1 previous error
